# iot-anomaly-detection

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-25-iot-anomaly-detection-plan.md  2026-05-25-iot-dashboard-plan.md
docs/superpowers/specs/: 2026-05-25-iot-anomaly-detection-design.md  2026-05-25-iot-dashboard-design.md
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  test-setup.ts  useWebSocket.ts
frontend/src/components/: DataTable.tsx  EmptyState.tsx  FilterTabs.tsx  MiniSparkline.tsx  SeverityDot.tsx  Sidebar.tsx  StatCard.tsx  (+3 more)
src/: __init__.py  config.py
src/alerting/: __init__.py  channels.py  dedup.py  router.py
src/api/: app.py  deps.py  websocket.py
src/cli/: simulate.py
src/detection/: __init__.py  base.py  engine.py  hard_boundary.py  lstm_ae.py  statistical.py
src/drift/: monitor.py
src/feedback/: collector.py
src/ingestion/: __init__.py  mqtt.py
src/models/: __init__.py  anomaly.py  device.py  sensor.py
src/preprocessing/: __init__.py  scaler.py
src/storage/: __init__.py  postgres.py  redis.py  timescaledb.py
src/threshold/: __init__.py  pot.py
src/training/: dataset.py  export_onnx.py  model.py  self_cleaning.py  train.py
tests/: conftest.py  test_alert_router.py  test_api.py  test_dedup.py  test_detection_engine.py  test_hard_boundary.py  test_integration.py  test_lstm_ae_model.py  test_pot.py  test_scaler.py  test_statistical.py  test_training.py
(+39 files in other folders)
